samples/_failures_safe/1761709541_5e2470_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6ee371d4.c: In function ‘main’:
./samples/SAFE/__tmp_6ee371d4.c:200:5: error: expected expression at end of input
  200 |     int token_count =
      |     ^~~
./samples/SAFE/__tmp_6ee371d4.c:200:5: error: expected declaration or statement at end of input
